-
Bug
-
Resolution: Fixed
-
P2: Important
-
4.5.2, 6.4.1
-
Qt 4: 54865d47cfd859a0e84ba8e1bbff3b56c93d4e0d, Qt 4 fixup abba37cd0eff959edf2d011842cbf2b36cce8467 (NOT merged), Qt 5 fixup ae4243df1e53b0aaeada708f6fa7979a0f0d216a (dev 12.2.2014, 5.3), 5edb71c6d (dev), fe4955c2f (6.5)
I've discovered a bug with QWidget::restoreGeometry: if the restored geometry includes WindowMaximized and the window being restored to is already maximized, then the window gets resized to a non-maximized size, but behaves as if it was maximized (i.e. unable to resize the window; maximized window button appears as maximized).
I've included a small example that demonstrates the problem. When you run it you will have two top-level windows - maximise the one labelled "Test Window" by pressing the window maximize button in the title bar (or double clicking the title), then on the one titled Control Panel, press Save Geometry followed by Restore Geometry. You will now find that the Test Window is back to it's original size, but is un-resizable.
This example worked in version 4.4.3.
- relates to
-
QTBUG-77385 QWidget::restoreGeometry does not work as documented.
-
- Closed
-
- resulted in
-
QTBUG-21371 QWidget::restoreGeometry doesn't restore correct screen number if application was in maximized or fullScreen state
-
- Closed
-
For Gerrit Dashboard: QTBUG-4397 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
448295,14 | Fix QWidget::restoreGeometry when restored geometry is off screen | dev | qt/qtbase | Status: MERGED | +2 | 0 |
449468,2 | Fix QWidget::restoreGeometry when restored geometry is off screen | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
449469,2 | Fix QWidget::restoreGeometry when restored geometry is off screen | 6.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |