Add full-screen option (F11) and try to tidy unity menus

Unity / Natty has an odd idea about getting rid of application
menus. QT seems to have a bug where it can't restore the window
state correctly if the application appears on the second monitor
with no menu bar.

https://bugreports.qt.nokia.com/browse/QTBUG-4397

Tried and failed to fix this.